k8s/excercise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-dep
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: arturix/springbootappci:latest
          ports:
            - containerPort: 80
