k8s/excercise-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-external-service
spec:
  selector:
    app: my-app
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
      protocol: TCP
