k8s/mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    # we want this service connect to the pod
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
