k8s/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  # this makes the service external
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # port for external IP address. Range 30000-32000
      nodePort: 30000
