k8s/myapp-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-external-service
spec:
  selector:
    app: myapp
  # Assign external IP to service
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      # External port that user can access application at
      nodePort: 35010
      protocol: TCP
