k8s/service-structure.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
# Attributes of "spec" are specific to the kind!
spec:
  selector: ...
  ports: ...
